[tool.black]
line_length = 120
exclude = '''(\.git|\.hg|\.mypy_cache|\.tox|\.venv|_build|buck-out|build|dist|^.*\b(migrations)\b.*$)'''

[tool.isort]
line_length = 120
profile="black"

[tool.pyright]
venv = ".venv"
venvPath = "."
include = [
    "modules",
    "config",
]
exclude = [
    "**/__pycache__",
]
defineConstant = { DEBUG = true }

reportMissingImports = true
reportMissingTypeStubs = false

pythonVersion = "3.11.3"
pythonPlatform = "Linux"

[tool.ruff]
select = ["E", "F"]
ignore = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
per-file-ignores = {}
line-length = 120
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
target-version = "py311"

[tool.poetry]
name = "export-report"
version = "0.1.0"
description = ""
authors = ["Korchizhinskiy Nazar"]
readme = "README.md"
packages = [{include = "export_report"}]

[tool.poetry.dependencies]
python = "3.11.3"
pandas = "^2.0.3"
pyyaml = "^6.0.1"
loguru = "^0.7.0"
python-dotenv = "^1.0.0"
ruff = "^0.0.284"
xlsxwriter = "^3.1.2"


[tool.poetry.group.dev.dependencies]
ipython = "^8.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
